fixing swiping gesture on mobile safari

--- a/elements/create-document.css
+++ b/elements/create-document.css
@@ -83,7 +83,7 @@
     left: 50%;
     width: 510px;
     margin-top: -135px;
-    margin-left: 250px;
+    margin-left: -250px;
   }
 
   .create-document-jumbo-icon {
